--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5.39", feature = ["derive"] }
 crc = "3.3.0"
+structopt = { version = "0.3", default-features = false }
